--- a/src/app/application-onboarding/data-source/create-data-source/data-source-forms/data-source-forms.component.html
+++ b/src/app/application-onboarding/data-source/create-data-source/data-source-forms/data-source-forms.component.html
@@ -5,24 +5,37 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <div class="form-group" *ngFor = "let formField of formData; let i=index;">
-                        <ng-container *ngIf="formField.dataType === 'string' ? true  : false ">
-                            <label>{{formField.displayName}}</label>
-                            <input type="text" name="{{formField.name}}" class="form-control" #input="ngModel"
-                            [ngClass]="(input.invalid && input.touched) || (input.invalid && datasourceForm.submitted)?'is-invalid':''" [required]="formField.required"  ngModel>
-                            <span *ngIf="(input.invalid && input.touched) || (input.invalid && datasourceForm.submitted)" class="invalid-feedback">
-                                {{formField.displayName}} is required
-                            </span>
-                        </ng-container>
-                        <ng-container *ngIf="formField.dataType === 'boolean' ? true  : false ">
-                            <input type="checkbox" style="margin-right: 4px;" name="{{formField.name}}" [required]="formField.required" #input="ngModel"  ngModel>
-                            <label for="{{formField.name}}" class="form-check-label">{{formField.displayName}}</label>
-                            <span *ngIf="(input.invalid && input.touched) || (input.invalid && datasourceForm.submitted)" class="invalid-feedback">
-                                {{formField.displayName}} is required
-                            </span>
-                        </ng-container>
-                        
+                    <!-- statuc fields section start -->
+                    <div class="form-group">
+                        <label>Account Name</label>
+                        <input type="text" name="name" class="form-control" #input="ngModel"
+                            [ngClass]="(input.invalid && input.touched) || (input.invalid && datasourceForm.submitted)?'is-invalid':''" [required]="true"  ngModel>
+                        <span *ngIf="(input.invalid && input.touched) || (input.invalid && datasourceForm.submitted)" class="invalid-feedback">
+                            Account Name is required
+                        </span>
                     </div>
+                    <!-- statuc fields section ends -->
+                    <!-- dynamic fields section start -->
+                    <ng-container ngModelGroup="configFields">
+                        <div class="form-group" *ngFor = "let formField of formData; let i=index;">
+                            <ng-container *ngIf="formField.dataType === 'string' ? true  : false ">
+                                <label>{{formField.displayName}}</label>
+                                <input type="text" name="{{formField.name}}" class="form-control" #input="ngModel"
+                                [ngClass]="(input.invalid && input.touched) || (input.invalid && datasourceForm.submitted)?'is-invalid':''" [required]="formField.required"  ngModel>
+                                <span *ngIf="(input.invalid && input.touched) || (input.invalid && datasourceForm.submitted)" class="invalid-feedback">
+                                    {{formField.displayName}} is required
+                                </span>
+                            </ng-container>
+                            <ng-container *ngIf="formField.dataType === 'boolean' ? true  : false ">
+                                <input type="checkbox" style="margin-right: 4px;" name="{{formField.name}}" [required]="formField.required" #input="ngModel"  ngModel>
+                                <label for="{{formField.name}}" class="form-check-label">{{formField.displayName}}</label>
+                                <span *ngIf="(input.invalid && input.touched) || (input.invalid && datasourceForm.submitted)" class="invalid-feedback">
+                                    {{formField.displayName}} is required
+                                </span>
+                            </ng-container>
+                        </div>
+                    </ng-container>
+                    <!-- dynamic fields section ends -->
                 </div>
                 <div class="col-md-2"></div>
             </div>
