--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -471,7 +471,7 @@
 <!-- Modal Log -->
 <div class="modal bd-example-modal-lg fade" id="newLogTemplate" tabindex="-1" role="dialog" aria-labelledby="newLogTemplateLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
+    <div class="modal-content" style="min-width:1000px;">
       <div class="modal-header">
         <h5 class="modal-title">New Log Template</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" #logModel>
