--- a/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
+++ b/src/app/application-onboarding/application/application-creation/log-template/log-template.component.html
@@ -1,14 +1,4 @@
-<!-- 
-  <div class="col-12 maindiv">
-    <json-editor [options]="editorOptions" [data]="data" (change)="showJson($event)"></json-editor>
-  </div>
-  <hr>
-  <div class="col-12">
-    <button class="btn btn-primary ml-2 savebtn" (click)="Submitlogdata()">Save</button>
-  </div> -->
-
   <div class="pt-1">
-
     <ul class="nav tab-lined nav-tabs" id="myTab" role="tablist" (click)="onClickTab($event.target.id)">
       <li class="nav-item" >
         <a class="nav-link active" id="logtemplate-form-tab" data-toggle="tab" role="tab" aria-controls="logtemplate-form" aria-selected="true">Log Template</a>
@@ -228,64 +218,7 @@
               <mat-step [stepControl]="logTopicsForm">
                 <form [formGroup]="logTopicsForm">
                   <ng-template matStepLabel>Log Topic</ng-template>
-                  <!-- <mat-form-field>
-                    <mat-label>Address</mat-label>
-                    <input matInput formControlName="secondCtrl" placeholder="Ex. 1 Main St, New York, NY"
-                           required>
-                  </mat-form-field> -->
                   <div id="step-2">
-                    <div class="multisteps-form__content">                          
-                      <div class="px-4 py-3">
-                        <div class="d-flex align-items-center mb-4">
-                          <div class="text-divider flex-grow-1 p-0">
-                            <h4>Cluster Tag</h4>
-                          </div>
-                        </div>
-           
-                        <div class="row">
-                          <div class="form-group">
-                            <div class="custom-control custom-checkbox">
-                              <input type="checkbox" class="custom-control-input"  id="clusterTagId"  (change)="onClusterChange($event)">
-                              <label class="custom-control-label text-muted" for="clusterTagId">Add Cluster Tag</label>
-                            </div>
-                          </div>
-                          <div *ngIf="clusterTagFlag === true"  class="col-12" style="height:150px; overflow-y:auto;" #scroll>
-                            <table id="dtVerticalScrollExample"  class="table table-outline table-md" formArrayName="clusterList">
-                              <thead>
-                                <tr>
-                                  <th>CLUSTER TAG STRING</th>
-                                  <th>CLUSTER TAG</th>
-                                  <th class="text-right"><a (click)="addNewClusterTag()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Cluster"><i class="fas fa-plus"></i></a></th>
-
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr *ngFor="let clusterTags of logTopicsForm.get('clusterList')['controls'];let i=index;">
-                                 <ng-container [formGroupName]="i">
-                                  <td>
-                                    <input type="text"  class="form-control" value="{{clusterTags.string}}" formControlName="string" required>
-                                  </td>
-                                  <td>
-                                    <select class="form-control" formControlName="tag">
-                                     <option value="" [disabled]="true">Select</option>
-                                     <option *ngFor="let clusterConfig of clusterTagConfig;let i=index" value="{{clusterConfig}}" required >
-                                       {{clusterConfig}}</option>
-                                  </select>
-                                  </td>
-                                  <td>
-                                    <a (click)="deleteClusterTag(clusterTags,i)" class="text-muted"><i class="fas fa-trash-alt"></i></a>
-                                  </td>
-                                  </ng-container>
-                                </tr>
-                              </tbody>
-                            </table>
-                            <!-- /.table table-sm -->
-                          </div>
-                          <!-- /.col-8 -->
-                        </div>
-                        <!-- /.row -->
-                      </div>
-                    </div>
                     <div class="multisteps-form__content">                          
                        <div class="px-4 py-3">
                          <div class="d-flex align-items-center mb-4">
@@ -295,7 +228,7 @@
                          </div>
             
                          <div class="row">
-                           <div class="col-12" style="height:400px; overflow-y:auto;" #scroll>
+                           <div class="col-12" style="height:400px; overflow-y:auto;" #scrollLogTopics>
                              <table id="dtVerticalScrollExample"  class="table table-outline table-md" formArrayName="topicsList">
                                <thead>
                                  <tr>
@@ -357,6 +290,69 @@
                          <!-- /.row -->
                        </div>
                      </div>
+                  </div>
+                  <div>
+                    <button mat-button matStepperPrevious class="pull-left">Back</button>
+                    <button type="button" mat-button matStepperNext class="btn btn-secondary sw-btn-next pull-right">Next</button>
+                  </div>
+                </form>
+              </mat-step>
+              <mat-step [stepControl]="logTopicsForm">
+                <form [formGroup]="logTopicsForm">
+                  <ng-template matStepLabel>Log Tags</ng-template>
+                  <div id="step-2">
+                    <div class="multisteps-form__content">                          
+                      <div class="px-4 py-3">
+                        <div class="d-flex align-items-center mb-4">
+                          <div class="text-divider flex-grow-1 p-0">
+                            <h4>Cluster Tag</h4>
+                          </div>
+                        </div>
+           
+                        <div class="row">
+                          <div class="form-group">
+                            <div class="custom-control custom-checkbox">
+                              <input type="checkbox" class="custom-control-input"  id="clusterTagId"  (change)="onClusterChange($event)">
+                              <label class="custom-control-label text-muted" for="clusterTagId">Add Cluster Tag</label>
+                            </div>
+                          </div>
+                          <div *ngIf="clusterTagFlag === true"  class="col-12" style="height:150px; overflow-y:auto;" #scrollLogTags>
+                            <table id="dtVerticalScrollExample"  class="table table-outline table-md" formArrayName="clusterList">
+                              <thead>
+                                <tr>
+                                  <th>CLUSTER TAG STRING</th>
+                                  <th>CLUSTER TAG</th>
+                                  <th class="text-right"><a (click)="addNewClusterTag()" data-toggle="tooltip" data-placement="top" data-original-title="Add New Log Cluster"><i class="fas fa-plus"></i></a></th>
+
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let clusterTags of logTopicsForm.get('clusterList')['controls'];let i=index;">
+                                 <ng-container [formGroupName]="i">
+                                  <td>
+                                    <input type="text"  class="form-control" value="{{clusterTags.string}}" formControlName="string" required>
+                                  </td>
+                                  <td>
+                                    <select class="form-control" formControlName="tag">
+                                     <option value="" [disabled]="true">Select</option>
+                                     <option *ngFor="let clusterConfig of clusterTagConfig;let i=index" value="{{clusterConfig}}" required >
+                                       {{clusterConfig}}</option>
+                                  </select>
+                                  </td>
+                                  <td>
+                                    <a (click)="deleteClusterTag(clusterTags,i)" class="text-muted"><i class="fas fa-trash-alt"></i></a>
+                                  </td>
+                                  </ng-container>
+                                </tr>
+                              </tbody>
+                            </table>
+                            <!-- /.table table-sm -->
+                          </div>
+                          <!-- /.col-8 -->
+                        </div>
+                        <!-- /.row -->
+                      </div>
+                    </div>
                   </div>
                   <div>
                     <button mat-button matStepperPrevious class="pull-left">Back</button>
