--- a/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
+++ b/src/app/application/deployment-verification/log-analysis/log-analysis.component.less
@@ -67,3 +67,12 @@
         }
     }
 }
+// .w60
+// {
+//     width: 60% !important;
+// } 
+// .ml20
+// {
+//     margin-left: 30% !important;
+   
+// }
