fixed issue of deleting log topic and appdashboard handled error when api is failing

--- a/src/app/application/application-dashboard/application-dashboard.component.html
+++ b/src/app/application/application-dashboard/application-dashboard.component.html
@@ -110,7 +110,9 @@
           <div *ngIf="oesServiceData && oesServiceData.length === 0 && showAppDataType === 'Services'" class="alert alert-danger" role="alert">
             <p>{{serviceErrorMessage}}</p>
           </div>
-         
+          <div *ngIf="showAppDataType === 'Services' && statusMessage === 'error'" class="alert alert-danger" role="alert">
+            <p>{{serviceErrorMessage}}</p>
+          </div>
          
           <div class="table-responsive" *ngIf="showAppDataType === 'Services' && oesServiceData && oesServiceData.length>0">
             <table class="table table-pet-service mb-0">
@@ -132,9 +134,13 @@
               </tbody>
             </table>
           </div>
-          <div *ngIf="autoPilotServiceData && autoPilotServiceData.length === 0 && showAppDataType === 'Deployment Verification'" class="alert alert-danger" role="alert">
+        <div *ngIf="autoPilotServiceData && autoPilotServiceData.length === 0 && showAppDataType === 'Deployment Verification'" class="alert alert-danger" role="alert">
             <p>{{serviceErrorMessage}}</p>
           </div>
+          <div *ngIf="showAppDataType === 'Deployment Verification' && statusMessage === 'error'" class="alert alert-danger" role="alert">
+            <p>{{serviceErrorMessage}}</p>
+          </div>
+          
           <div class="table-responsive" *ngIf="showAppDataType === 'Deployment Verification'  && autoPilotServiceData && autoPilotServiceData.length>0">
             <table class="table table-pet-service text-center mb-0">
             <thead>
