--- a/src/app/application-onboarding/application/appliaction-list/appliaction-list.component.html
+++ b/src/app/application-onboarding/application/appliaction-list/appliaction-list.component.html
@@ -4,7 +4,7 @@
       <div class="col-sm-12 d-flex flex-column">
         <div class="h-100 d-flex flex-column">
           <div class="tab-content h-100 p-3 flex-grow-1">
-            <div *ngIf="tableIsEmpty" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+            <div *ngIf="tableIsEmpty && !loading" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
               <div class="page_access text-right p-3">
                 <button class="btn btn-default" (click)="createApplication()">New Application</button>
               </div>
@@ -46,6 +46,7 @@
                       <th class="font-weight-bold">APPLICATION NAME</th>
                       <th class="font-weight-bold">DESCRIPTION</th>
                       <th class="font-weight-bold">EMAIL</th>
+                      <th class="font-weight-bold">ACTION</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -53,10 +54,10 @@
                       <td>{{listData.name}}</td>
                       <td>{{listData.description}}</td>
                       <td>{{listData.email}}</td>
-                      <!-- <td>
-                            <a *ngIf = "listData.status === 'ACTIVE' ? true : false"  class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(i)"><i class="fas fa-pencil-alt"></i></a>
-                            <a *ngIf = "listData.status === 'ACTIVE' ? true : false" (click)="appDelete(listData.name,i)"  class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
-                          </td> -->
+                      <td>
+                        <!-- <a  class="text-muted"  data-toggle="tooltip" data-placement="top" title="Edit" (click)="editApplication(i)"><i class="fas fa-pencil-alt"></i></a> -->
+                        <a  (click)="appDelete(listData.name,i,listData.applicationId)"  class="text-muted ml-2"  data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                      </td>
                     </tr>
                   </tbody>
                 </table>
@@ -99,7 +100,7 @@
               </div>
               <!-- /.table-content -->
             </div>
-            <div *ngIf="!tableIsEmpty && loading" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+            <div *ngIf="loading" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
              <app-loading-screen></app-loading-screen>
             </div>
           </div>
