--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -180,7 +180,7 @@
                           <div class="form-group mb-3 pl-4 text-muted">
                             <label>Service Name</label>
                             <div class="d-flex  mr-4 align-items-center">
-                              <input type="text" class="form-control input_len" formControlName="serviceName" [readonly]="isReadonly(i)" 
+                              <input type="text" class="form-control input_len" formControlName="serviceName" 
                               [ngClass]="servicesForm.get('services')['controls'][i].get('serviceName').invalid && servicesForm.get('services')['controls'][i].get('serviceName').touched ? 'is-invalid':''">
                               <a class="text-muted ml-3 formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete Service" 
                               (click)="deleteService(i)" *ngIf ="servicesForm.get('services')['controls'].length > 1 ? true : false">
@@ -248,7 +248,7 @@
                                   <label>Docker Account & Image Name</label>
                                   <div class="d-flex  mr-5 align-items-center">
                                       <div class="col-5 dockerImageSource">
-                                        <select class="form-control customAcc {{isReadonly(i)?'disabledinput':''}}" formControlName="accountName" value="{{dockerAccountName}}" (change)="onChangeDockerAcc($event,i)"
+                                        <select class="form-control customAcc" formControlName="accountName" value="{{dockerAccountName}}" (change)="onChangeDockerAcc($event,i)"
                                         [ngClass]="!pipelineArr.get('dockerImageName.imageName').valid && pipelineArr.get('dockerImageName.imageName').touched ? 'wheninvalid':''">
                                           <option value="" [disabled]="true">Select</option>
                                           <option *ngFor="let dockerimages of dockerImageData" value="{{dockerimages.imageSource}}">{{dockerimages.imageSource}}</option>
@@ -272,7 +272,7 @@
                                         <label>{{pipelineParameterArr.get('name').value}}</label>
                                         <div class="d-flex mr-6 align-items-center">
                                           <input *ngIf = "pipelineParameterArr.get('type').value !== 'boolean'" type="{{pipelineParameterArr.get('type').value === 'string'? 'text' : 'number'}}" 
-                                          class="form-control" placeholder="{{getProperValue(i,j,k)}}" formControlName="value" (change)="onChangeValue(i,j,k,$event)"
+                                          class="form-control" placeholder="{{getProperValue(i,j,k)}}" formControlName="value" 
                                           [ngClass]="!pipelineParameterArr.get('value').valid && pipelineParameterArr.get('value').touched ? 'is-invalid':''">
                                           <select *ngIf = "pipelineParameterArr.get('type').value === 'boolean'" class="form-control" formControlName="value"
                                           [ngClass]="!pipelineParameterArr.get('value').valid && pipelineParameterArr.get('value').touched ? 'is-invalid':''">
@@ -333,13 +333,13 @@
                             <tr *ngFor="let optionsArr of environmentForm.get('environments')['controls'];let i=index">
                               <ng-container [formGroupName]="i">
                                 <td>
-                                  <input type="text" class="form-control" formControlName="key" (change)="onEnvironmentUpdate(i,'key',$event)"
+                                  <input type="text" class="form-control" formControlName="key" 
                                   [ngClass]="!environmentForm.get('environments')['controls'][i].get('key').valid && environmentForm.get('environments')['controls'][i].get('key').touched ? 'is-invalid':''">
                                   <span *ngIf="!environmentForm.get('environments')['controls'][i].get('key').valid && environmentForm.get('environments')['controls'][i].get('key').touched"
                                   class="invalid-feedback">Key is required</span>
                                 </td>
                                 <td>
-                                  <input type="text" class="form-control" formControlName="value" (change)="onEnvironmentUpdate(i,'value',$event)">
+                                  <input type="text" class="form-control" formControlName="value">
                                 </td>
                                 <td>
                                   <a class="text-muted formarray_btn"  data-toggle="tooltip" data-placement="right" title="Delete"
